@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US022

class Organization {
}

class GreenSpacesManager {
    name
}

class Agenda {
    entriesList
}

class ToDoList {
    tasksList
}

class Entry {
    startingDate
    agendaStatus
}

class Task {
    reference
    description
    degreeOfUrgency
    expectedDuration
    type
    taskStatus
    greenSpace
}

Organization "1" -- "1..*" GreenSpacesManager : has >
Organization "1" -- "1" Agenda : has >
Organization "1" -- "1" ToDoList : has >
GreenSpacesManager "1" -- "1" Task : selects  >
GreenSpacesManager "1" -- "1..*" Entry : adds >
Agenda "1" -- "0..*" Entry : has >
ToDoList "1" -- "1..*" Task : has >
Task "1" -- "1" Entry : assigned to >

@enduml